# Micro_NV_NMR

./: Cargo.toml  HollowChip.stl  README.md  config.yaml  pyproject.toml
benches/: bench.rs  nmr.rs
src/: lib.rs  linear_algebra.rs  main.rs  nmr_and_mesh.rs  types.rs
