[package]
name = "nmr_stl_python"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "nmr_stl_python"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.18.1"
csv = "1.2.1"
rand = { version = "0.8.5", features = ["small_rng"] }
stl_io = "0.7.0"
serde = { version = "1.0.158", features = ["derive"] }
serde_yaml = "0.7.0"
rayon = "1.7.0"
rand_distr = "0.4.3"
nalgebra = "0.32.5"
bvh = "0.8.0"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "bench"
harness = false

[profile.release]
debug = true
